@@ -1,3 +1,11 @@
+2005-12-03  Michal Nazarewicz  (mina86/AT/tlen.pl)
+
+	* mpd-show.c: + -b and -B options added
+	+ iconv added
+	+ signals added
+	+ print_song() corrected a bit
+	+ diff_song() compares bar length instead of pos
+
 2005-12-29  Michal Nazarewicz  (mina86/AT/tlen.pl)
 
 	* extractlinks.pl: + may specify several urls now
